# perfetto

./: Android.bp  BUILD
.github/actions/install-build-deps/: action.yml
.github/workflows/: analyze.yml  android-tests.yml  linux-tests.yml
include/perfetto/public/protos/config/: data_source_config.pzc.h
protos/perfetto/config/: BUILD.gn  data_source_config.proto  perfetto_config.proto
protos/perfetto/config/tracealyzer/: BUILD.gn  tracealyzer_config.proto
protos/perfetto/trace/: perfetto_trace.proto
protos/perfetto/trace/ftrace/: i2c.proto
python/perfetto/protos/perfetto/trace/: perfetto_trace_pb2.py  perfetto_trace_pb2.pyi
src/tools/ftrace_proto_gen/: proto_gen_utils.cc
src/trace_processor/importers/ftrace/: ftrace_descriptors.cc
src/traced/probes/: BUILD.gn  probes_producer.cc
src/traced/probes/ftrace/: cpu_reader.cc  event_info.cc  event_info_constants.cc  event_info_constants.h  proto_translation_table.cc
src/traced/probes/tracealyzer/: BUILD.gn  trace_event.cc  trace_event.h  tracealyzer_data_source.cc  tracealyzer_data_source.h
